--- a/imports/ui/pages/events-add.html
+++ b/imports/ui/pages/events-add.html
@@ -5,13 +5,11 @@
     </div>
     <form id="insert-event">
       <div class="list">
-        <label class="item item-input {{nameError}}">
-          {{#if nameError}}
-            <span class="input-label assertive">Event name required</span>
-          {{/if}}
-          <input type="text" name="name" id="event-name" placeholder="Event name">
+        <label class="item item-input">
+          <input type="text" class="{{nameError}}" name="name" id="event-name" placeholder="Event name">
         </label>
-        <label class="item item-input upload-avatar">
+
+        <label class="item item-input upload-avatar {{imageError}}">
           {{#unless loaded}}
             Upload an avatar <i class="ion-ios-upload-outline"></i>
           {{/unless}}
@@ -20,42 +18,30 @@
           {{/if}}
           <input type="file" name="avatar" id="create-avatar" accept="image/*">
           <img id="uploaded-image" src="{{image}}">
-          {{#if imageError}}
+          {{#if imageErrorMessage}}
             <span class="assertive">{{imageErrorMessage}}</span>
           {{/if}}
         </label>
-        <label class="item item-input description {{descriptionError}}">
-          {{#if descriptionError}}
-            <span class="input-label assertive">Event description required</span>
-          {{/if}}
-          <textarea name="description" id="event-description" placeholder="Description" maxlength="250"></textarea>
-          {{#unless descriptionError}}
-            <span class="char-count">{{charCount}} characters left</span>
-          {{/unless}}
+
+        <label class="item item-input description">
+          <textarea name="description" class="{{descriptionError}}" id="event-description" placeholder="Description" maxlength="250"></textarea>
+          <span class="char-count {{descriptionError}}">{{charCount}} characters left</span>
         </label>
-        <label class="item item-input address {{addressError}}">
-          {{#if addressError}}
-            <span class="input-label assertive">Event address required</span>
-          {{/if}}
-          <input type="text" name="address" id="event-address" placeholder="Event address">
+
+        <label class="item item-input address">
+          <input type="text" name="address" class="{{addressError}}" id="event-address" placeholder="Event address">
           {{#unless addressError}}
             <i class="ion-ios-close"></i>
           {{/unless}}
         </label>
+
         <label class="item item-input">
-          {{#if dateError}}
-            <span class="input-label assertive">Event date required</span>
-          {{else}}
-            <span class="input-label">Event date</span>
-          {{/if}}
+          <span class="input-label {{dateError}}">Event date</span>
           <input type="date" min="{{minDate}}" name="date" id="event-date">
         </label>
+
         <label class="item item-input">
-          {{#if timeError}}
-            <span class="input-label assertive">Event time required</span>
-          {{else}}
-            <span class="input-label">Event time</span>
-          {{/if}}
+          <span class="input-label {{timeError}}">Event time</span>
           <input type="time" name="time" id="event-time">
         </label>
       </div>
